update package display name, fix meta

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
   {
     "name": "com.desertimage.ecs-burst.tween",
     "version": "0.1.0",
-    "displayName": "ECS",
+    "displayName": "ESC-Burst.Tween",
     "description": "",
     "unity": "2020.3",
     "keywords": [],
