--- a/Tween/DesertImage.Tween.asmdef
+++ b/Tween/DesertImage.Tween.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "DesertImage.ECS",
         "Unity.Mathematics",
-        "DesertImage.ECS.Basic"
+        "DesertImage.ECS.Basic",
+        "com.unity.mathematics"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
