--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "unity": "2020.3",
     "keywords": [],
     "dependencies": {
-      "om.unity.mathematics" : "1.2.6"
+      "com.unity.mathematics" : "1.2.6"
   }
 }
